<resources>
    <string name="app_name">Quickly Answers</string>
    <string name="question_code">Código</string>
    <string name="your_phone">Tu teléfono</string>
    <string name="your_code">Tu código</string>
    <string name="question">Pregunta</string>
    <string name="add_answer">Adicionar otra respuesta</string>
    <string name="answer_1">Respuesta 1</string>
    <string name="answer_2">Respuesta 2</string>
    <string name="answer_3">Respuesta 3</string>
    <string name="answer_4">Respuesta 4</string>
    <string name="create_question_message">Ingresa las posibles respuestas que podrán realizar tus contactos.</string>
    <string name="insert_code_message">Ingresa el código de una pregunta para responderla.</string>
    <string name="phone_message">Ingresa tu número telefónico.</string>
    <string name="code_phone_message">Ingresa el código que te llego por SMS.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
