<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_general"
    tools:context="tech.alvarez.quicklyanswers.CreateQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/questionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/answer1EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_1"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/answer2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_2"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/answer3EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_3"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/answer4EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_4"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        android:onClick="saveAnswer"
        android:src="@drawable/ic_paper_plane" />

</android.support.design.widget.CoordinatorLayout>
