<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.create.CreateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/questionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/question"
            android:inputType="textNoSuggestions|textCapSentences"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_question_message"
            android:textAlignment="center"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/answer1EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/answer_1"
            android:inputType="textNoSuggestions|textCapSentences"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/answer2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/answer_2"
            android:inputType="textNoSuggestions|textCapSentences"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/answer3EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/answer_3"
            android:inputType="textNoSuggestions|textCapSentences"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/answer4EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/answer_4"
            android:inputType="textNoSuggestions|textCapSentences"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"

        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cancelFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        app:fabSize="mini" />

</FrameLayout>